# franka_ros

franka_controllers_AI4M/: CMakeLists.txt  package.xml
franka_controllers_AI4M/cfg/: compliance_param.cfg  desired_mass_param.cfg  dual_arm_compliance_param.cfg  teleop_gripper_param.cfg  teleop_param.cfg
franka_controllers_AI4M/config/: franka_controllers_AI4M.yaml
franka_controllers_AI4M/include/franka_controllers_AI4M/: pseudo_inversion.h
franka_example_controllers/src/: cartesian_impedance_example_controller.cpp
franka_gazebo/config/: franka_sim_estimated_target.rviz  franka_sim_target_catching_with_interception_sphere.rviz  franka_sim_target_estimation_with_interception_sphere.rviz
franka_gazebo/launch/: panda_planner_tutorial.launch  panda_target_catching.launch  panda_target_catching_devel.launch
